<resources>
    <string name="app_name">EHealthCalendar</string>

    <!--    firebase nootification string-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>

    <!--    text for examples pdf-->
    <string name="pdf_text_title">Judul Dokumen</string>
    <string name="pdf_text_isi">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
        sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
        PageMaker including versions of Lorem Ipsum.
    </string>

    <!-- Strings for On Boarding Screen -->

    <!--Titles-->
    <string name="first_slide_title">Fokus Manajemen Diri \n Aktivitas Fisik</string>
    <string name="second_slide_title">Dilengkapi Pengingat</string>
    <string name="third_slide_title">Memuat Parameter \n Klinis HbA1c</string>
    <string name="fourth_slide_title">Dibuat Untuk Lansia</string>


    <!--Descriptions-->
    <string name="first_slide_desc">Dilengkapi fitur edukasi cara melakukan aktivitas fisik, aplikasi ini akan memudahkan anda untuk melaksanakannya secara mandiri</string>
    <string name="second_slide_desc">Pengingat anda untuk melakukan aktivitas fisik rutin setiap pekan. Terdapat kalender yang dapat membantu anda memantau aktivitas yang dilakukan</string>
    <string name="third_slide_desc"> Aplikasi akan menampilkan grafik yang menunjukkan perubahan gula darah dari waktu ke waktu sesuai hasil pemeriksaan anda.</string>
    <string name="fourth_slide_desc">Dengan tampilan yang sederhana dan fungsional, aplikasi ini memudahkan pengguna untuk memanfaatkan fitur-fitur yang ada.</string>

    <!--Buttons-->
    <string name="skip_btn">Lewati</string>
    <string name="next_btn">Selanjutnya</string>
    <string name="let_get_started">Mulai Sekarang</string>
    <string name="login_start"><![CDATA[Silahkan masukkan username & passowrd anda]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi">Hi, <b>Fadhil</b></string>
    <string name="descc">Brisk Walking adalah aktvitas berjalan cepat yang direkomendasikan dan efektif untuk menurunkan resiko penyakit Diabetes Melitus. Brisk Walking dengan menggunakan aplikasi ini dilakukan secara secara teratur sebanyak 5 kali perminggu selama sekitar 30 menit, dengan total 150 menit perminggu. Video ini akan menjelaskan lebih rinci cara melakukan Brisk Walking</string>

    <string name="previousMonthDescription">Previous month</string>

    <string name="nextMonthDescription">Next month</string>

    <string name="clearSelectionDescription">Clear selection</string>
    <string name="mulai">MULAI</string>
    <string name="desc_tentang">Aplikasi ini dikembangakan sebagai salah satu solusi untuk mengontrol kadar gula darah pada pasien Diabetes Melitus. Dengan memanfaatkan fitur-fitur yang telah dikembangakan, pengguna dapat melakukan aktivitas brisk walking secara teratur dan terdampingi, melihat nilai gula darah dari waktu ke waktu, serta mendapatkan edukasi dan dukungan langsung. \n\n\n Inventor : <b>Zainuddin</b></string>
    <string name="tentang_kontak">Kontak Kami melalui email : \n<b>ehealthcalendarpa@gmail.com</b></string>

</resources>