<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.OnBoarding">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider"/>



    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/skip_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="center_horizontal"
            android:onClick="skip"
            android:textColor="@color/primary_color"
            android:padding="10dp"
            android:text="@string/skip_btn"
            android:fontFamily="@font/dmsans_bold"
            android:textSize="16sp"

         />

        <TextView
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_input"
            android:gravity="center_horizontal"
            android:onClick="next"
            android:drawableEnd="@drawable/arrow_right_line"
            android:padding="12dp"
            android:textColor="@color/white"
            android:fontFamily="@font/dmsans_bold"
            android:text="@string/next_btn"

           />

        <TextView
            android:id="@+id/get_started_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_weight="2"
            android:background="@drawable/bg_input"
            android:gravity="center"
            android:onClick="start"
            android:drawableEnd="@drawable/arrow_right_line"
            android:padding="12dp"
            android:textColor="@color/white"
            android:fontFamily="@font/dmsans_bold"
            android:text="@string/let_get_started"
            android:visibility="gone"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>